tests/compile_fail/add/unknow_variant_attribute.rs
#[derive(derive_more::Add)]
enum Enum {
    #[add(unknown)]
    Bar { i: i32 },
}

fn main() {}
